[gd_scene load_steps=8 format=2]

[ext_resource path="res://materials/red_material.tres" type="Material" id=1]
[ext_resource path="res://materials/green_material.tres" type="Material" id=2]
[ext_resource path="res://objects/Floater.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/WaterGate.gd" type="Script" id=4]

[sub_resource type="CylinderShape" id=1]
height = 3.90542

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 1, 0.929412, 0.192157, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 6.12581, 1, 1 )

[node name="WaterGate" type="Spatial"]
script = ExtResource( 4 )

[node name="LeftBuoy" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.74789, 0, 0 )
gravity_scale = 0.0
linear_damp = 1.0

[node name="CSGCombiner" type="CSGCombiner" parent="LeftBuoy"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.891966, 0 )
material_override = ExtResource( 1 )

[node name="CSGCylinder2" type="CSGCylinder" parent="LeftBuoy/CSGCombiner"]
height = 3.92117

[node name="CollisionShape" type="CollisionShape" parent="LeftBuoy"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.891966, 0 )
shape = SubResource( 1 )

[node name="Floater" parent="LeftBuoy" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
apply_gravity = true

[node name="Indicator" type="CSGSphere" parent="LeftBuoy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )
material_override = SubResource( 2 )
radial_segments = 8
rings = 8

[node name="RightBuoy" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.80496, 0, 0 )
gravity_scale = 0.0
linear_damp = 0.5
angular_damp = 1.0

[node name="CSGCombiner" type="CSGCombiner" parent="RightBuoy"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.891966, 0 )
material_override = ExtResource( 2 )

[node name="CSGCylinder2" type="CSGCylinder" parent="RightBuoy/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.683071, -2.9858e-08 )
height = 2.53921

[node name="CSGCylinder3" type="CSGCylinder" parent="RightBuoy/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27762, 5.58465e-08 )
height = 1.40667
cone = true

[node name="CollisionShape" type="CollisionShape" parent="RightBuoy"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.891966, 0 )
shape = SubResource( 1 )

[node name="Floater" parent="RightBuoy" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
apply_gravity = true

[node name="Indicator" type="CSGSphere" parent="RightBuoy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )
material_override = SubResource( 2 )
radial_segments = 8
rings = 8

[node name="LeftJoint" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.70735, 0, 0 )
nodes/node_a = NodePath("../LeftBuoy")
angular_limit_x/enabled = false
linear_limit_y/upper_distance = 20.0
linear_limit_y/lower_distance = -20.0
angular_limit_y/enabled = false
angular_limit_z/enabled = false

[node name="RightJoint" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.95142, 0, 0 )
nodes/node_a = NodePath("../RightBuoy")
angular_limit_x/enabled = false
linear_limit_y/upper_distance = 20.0
linear_limit_y/lower_distance = -20.0
angular_limit_y/enabled = false
angular_limit_z/enabled = false

[node name="Area" type="Area" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
